kubevirt-gpol/add-services/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-service-ssh
policies:
- ../add-services.yaml
resources:
- resource.yaml
results:
- generatedResource: generatedResource.yaml
  kind: VirtualMachineInstance
  policy: k6t-add-services
  resources:
  - vmi-name
  result: pass
  isGeneratingPolicy: true
